# Printclaw-

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
printclaw/: cli.py  main.py
printclaw/core/: agent.py  command_runner.py  constants.py  context.py  fix_engine.py  issue_engine.py  kb_loader.py  network_utils.py  os_detect.py  paths.py  registry.py  report_builder.py  results.py  security.py  session_store.py  utils.py
printclaw/db/: database.py  models.py
printclaw/knowledgebase/errors/: network_printing.yaml  windows_spooler.yaml
printclaw/knowledgebase/fixes/: common_fixes.yaml
printclaw/knowledgebase/vendors/: brother.yaml  canon.yaml  hp.yaml  konica.yaml  ricoh.yaml
printclaw/skills/common/: ipconfig.py  network_ping.py  port_check.py
printclaw/skills/windows/: clear_queue.py  event_logs.py  list_printers.py  print_jobs.py  restart_spooler.py  spooler_status.py
printclaw/web/: app.py  routes.py
printclaw/web/static/: app.js  style.css
printclaw/web/templates/: index.html  session.html  sessions.html
tests/: test_api.py  test_kb.py  test_registry.py  test_report.py  test_sessions.py
